--- a/client/src/components/containers/Slideshow/Slideshow.module.scss
+++ b/client/src/components/containers/Slideshow/Slideshow.module.scss
@@ -1,50 +1,86 @@
 @import '../../../variables.scss';
 
-.slideshow_ctn {
-    position: relative;
-    width: 100%;
-    aspect-ratio: 3/2;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-
-    .slide {
-        position: absolute;
-        height: 100%;
+.slideshow_and_thumbnails_ctn {
+    .slideshow_ctn {
+        position: relative;
         width: 100%;
-        opacity: 0;
-        transition: opacity ease-in-out .4s;
-        img {
+        aspect-ratio: 3/2;
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        overflow: hidden;
+
+        .slide {
+            position: absolute;
             height: 100%;
             width: 100%;
-            object-fit: cover;
+            opacity: 0;
+            transition: opacity ease-in-out .4s;
+            img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+        .active_anim {
+            opacity: 1;
+        }
+
+        .slideshow_btn {
+            height: 50px;
+            width: 50px;
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: none;
+            border-radius: 50%;
+            color: white;
+            background-color: rgba(176, 176, 176, 0.6);
+            transition: all .4s;
+            &:hover {
+                cursor: pointer;
+                background-color: rgba(176, 176, 176, 0.8);
+
+                img {
+                    filter: invert(76%) sepia(19%) saturate(3163%) hue-rotate(3deg) brightness(111%) contrast(110%);
+                }
+            }   
+
+            img {
+                height: 30px;
+                width: 30px;
+                pointer-events: none;
+            }
         }
     }
-    .active_anim {
-        opacity: 1;
-    }
 
-    .slideshow_btn {
-        height: 50px;
-        width: 50px;
-        position: absolute;
+    .thumbnails_ctn {
+        position: relative;
         display: flex;
-        justify-content: center;
-        align-items: center;
-        border: none;
-        border-radius: 50%;
-        color: white;
-        background-color: rgba(176, 176, 176, 0.6);
-        transition: all .3s;
-        &:hover {
-            cursor: pointer;
-            background-color: rgba(176, 176, 176, 0.8);
-        }   
-        img {
-            height: 30px;
-            width: 30px;
-            pointer-events: none;
+        flex-direction: row;
+        width: 100%;
+        height: 100px;
+        padding: 0 5px;
+        overflow: hidden;
+
+        .thumbnail {
+            //width: 500px;
+            height: 100px;
+            aspect-ratio: 3/2;
+            margin: 10px 5px;
+            overflow: hidden;
+
+            img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                transition: opacity .4s;
+                &:hover {
+                    cursor: pointer;
+                    opacity: .6;
+                }
+            }
         }
     }
 }
